force-app/main/default/objects/Opportunity/fields/Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Type__c</fullName>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agriculture</fullName>
                <isActive>false</isActive>
                <label>Agriculture</label>
            </value>
            <value>
                <fullName>eVTOL</fullName>
                <label>Electric Vertical Takeoff &amp; Landing</label>
            </value>
            <value>
                <fullName>Engineering Service Vendor: Service Providers</fullName>
            </value>
            <value>
                <fullName>Higher Education &amp; Research</fullName>
                <isActive>false</isActive>
                <label>Higher Education &amp; Research</label>
            </value>
            <value>
                <fullName>Higher Education &amp; Research: Research Labs</fullName>
            </value>
            <value>
                <fullName>Higher Education &amp; Research: University</fullName>
            </value>
            <value>
                <fullName>Independent Hardware Vendor: Hardware</fullName>
            </value>
            <value>
                <fullName>Independent Hardware Vendor: Sensors</fullName>
            </value>
            <value>
                <fullName>Independent Software Vendor: AV Algorithm</fullName>
            </value>
            <value>
                <fullName>Independent Software Vendor: Software &amp; Simulation</fullName>
            </value>
            <value>
                <fullName>Independent Software Vendor: Trucking</fullName>
            </value>
            <value>
                <fullName>Mapping</fullName>
            </value>
            <value>
                <fullName>OEM: Commercial Vehicles</fullName>
            </value>
            <value>
                <fullName>OEM: Passenger Cars</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>R &amp; D Lab</fullName>
            </value>
            <value>
                <fullName>Robotaxi</fullName>
            </value>
            <value>
                <fullName>Startup</fullName>
            </value>
            <value>
                <fullName>TAAS</fullName>
            </value>
            <value>
                <fullName>Tier1</fullName>
            </value>
            <value>
                <fullName>Truck / Bus / Shuttle</fullName>
            </value>
            <value>
                <fullName>University</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>