force-app/main/default/objects/Opportunity/fields/Compute_GPUs__c.field-meta.xml
<CustomField>
    <fullName>Compute_GPUs__c</fullName>
    <description>SDS-2252: Enterprise Design Win</description>
    <inlineHelpText>Auto Populated field based on Product selection + Use Case</inlineHelpText>
    <label>Compute GPUs</label>
    <summarizedField>OpportunityLineItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Use_Case__c</field>
        <operation>equals</operation>
        <value>Compute</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>