force-app/main/default/objects/Opportunity/fields/Confirmed_OEM_ODM_Disti_Partner__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_OEM_ODM_Disti_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Not used and Marked for Deletion, ready for cleanup
Used in Flows
1. Opportunity - Repeat Business Flow (Active v5)
2. Share Oppty with OEM Account Owner (Process Builder)
3. Share Oppty with OEM Account Owner
Note : Solution team needs to confirm as there is an active process builder</description>
    <label>Confirmed OEM/ODM/Disti (NPN Partner)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>NPN Account Registry</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Confirmed OEM/ODM/Disti (NPN Partner))</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>