force-app/main/default/objects/Opportunity/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Pulls in &quot;Billing Country&quot; from Account</description>
    <formula>Account.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto populated from the &quot;Billing Country&quot; on the Account record.</inlineHelpText>
    <label>Country</label>
    <type>Text</type>
</CustomField>