force-app/main/default/objects/Opportunity/fields/CQ_JFF_Forecast__c.field-meta.xml
<CustomField>
    <fullName>CQ_JFF_Forecast__c</fullName>
    <label>CQ JFF Forecast</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CQ JFF</fullName>
            </value>
            <value>
                <fullName>CQ Upside</fullName>
            </value>
            <value>
                <fullName>NQ JFF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>