force-app/main/default/objects/Opportunity/fields/Create_Date_to_Close_Date_Days__c.field-meta.xml
<CustomField>
    <fullName>Create_Date_to_Close_Date_Days__c</fullName>
    <formula>CloseDate - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create Date to Close Date (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>