force-app/main/default/objects/Opportunity/fields/Critical_Priority_1_Software_Apps__c.field-meta.xml
<CustomField>
    <fullName>Critical_Priority_1_Software_Apps__c</fullName>
    <inlineHelpText>Select all key software applications included in this opportunity.  If none, select &quot;Not Applicable.”</inlineHelpText>
    <label>ISV Software Apps:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Acceleware RTM</fullName>
            </value>
            <value>
                <fullName>Adobe Creative Suite</fullName>
            </value>
            <value>
                <fullName>Agilent Technologies ADS</fullName>
            </value>
            <value>
                <fullName>Allegorithmic Substance Designer</fullName>
            </value>
            <value>
                <fullName>Allegorithmic Substance Painter</fullName>
            </value>
            <value>
                <fullName>Altair HyperWorks</fullName>
            </value>
            <value>
                <fullName>AMBER</fullName>
            </value>
            <value>
                <fullName>Amira5</fullName>
            </value>
            <value>
                <fullName>AMR</fullName>
            </value>
            <value>
                <fullName>ANSYS</fullName>
            </value>
            <value>
                <fullName>ANSYS AIM</fullName>
            </value>
            <value>
                <fullName>ANSYS FLUENT</fullName>
            </value>
            <value>
                <fullName>ANSYS HFSS</fullName>
            </value>
            <value>
                <fullName>ANSYS HFSS SBR+</fullName>
            </value>
            <value>
                <fullName>ANSYS Mechanical</fullName>
            </value>
            <value>
                <fullName>ANSYS Nexxim</fullName>
            </value>
            <value>
                <fullName>ANSYS Polyflow</fullName>
            </value>
            <value>
                <fullName>ANSYS Workbench</fullName>
            </value>
            <value>
                <fullName>ASUCA</fullName>
            </value>
            <value>
                <fullName>Autodesk 3DS Max</fullName>
            </value>
            <value>
                <fullName>Autodesk AutoCAD</fullName>
            </value>
            <value>
                <fullName>Autodesk Inventor 2012</fullName>
            </value>
            <value>
                <fullName>Autodesk Maya</fullName>
            </value>
            <value>
                <fullName>Autodesk Revit.</fullName>
            </value>
            <value>
                <fullName>Autodesk vRed</fullName>
            </value>
            <value>
                <fullName>AVBP</fullName>
            </value>
            <value>
                <fullName>BEST</fullName>
            </value>
            <value>
                <fullName>BetaCAE ANSA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>