force-app/main/default/objects/Opportunity/fields/Current_GPU_Brand__c.field-meta.xml
<CustomField>
    <fullName>Current_GPU_Brand__c</fullName>
    <label>Current GPU Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMD</fullName>
            </value>
            <value>
                <fullName>NVIDIA</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>