force-app/main/default/objects/Opportunity/fields/Current_NVIDIA_GPU__c.field-meta.xml
<CustomField>
    <fullName>Current_NVIDIA_GPU__c</fullName>
    <label>Current NVIDIA GPU</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Current_GPU_Brand__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GeForce</fullName>
            </value>
            <value>
                <fullName>vGPU</fullName>
            </value>
            <value>
                <fullName>Quadro</fullName>
            </value>
            <value>
                <fullName>Jetson</fullName>
            </value>
            <value>
                <fullName>Tegra</fullName>
            </value>
            <value>
                <fullName>DGX</fullName>
            </value>
            <value>
                <fullName>Tesla</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>