force-app/main/default/objects/Opportunity/fields/Customer_Aligned_with_TPC_Results__c.field-meta.xml
<CustomField>
    <fullName>Customer_Aligned_with_TPC_Results__c</fullName>
    <inlineHelpText>Customer has agreed to use TPC results for RFI/RFP planning purposes</inlineHelpText>
    <label>Customer Aligned with TPC Results?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>