force-app/main/default/objects/Opportunity/fields/Customer_DRIVE_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Customer_DRIVE_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer DRIVE Configuration</label>
    <referenceTo>Auto_Configuration__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>