force-app/main/default/objects/Opportunity/fields/Customer_Press_Release_PR_Issuing_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Press_Release_PR_Issuing_Date__c</fullName>
    <description>SDS-2150-Encourage Press Release (PR) with customers using Task</description>
    <label>Customer Press Release (PR) Issuing Date</label>
    <type>Date</type>
</CustomField>