force-app/main/default/objects/Opportunity/fields/Customer_Press_Release_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Press_Release_Status__c</fullName>
    <description>SDS-2150-Encourage Press Release (PR) with customers using Task</description>
    <label>Customer Press Release Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Releasing PR</fullName>
            </value>
            <value>
                <fullName>OEM Releasing PR</fullName>
            </value>
            <value>
                <fullName>Customer &amp; OEM Releasing PR</fullName>
            </value>
            <value>
                <fullName>No PR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>