force-app/main/default/objects/Opportunity/fields/Customer_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Program_Name__c</fullName>
    <description>JIRA #SDS-2699</description>
    <label>Customer Program Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>