force-app/main/default/objects/Opportunity/fields/Customer_Project_Details__c.field-meta.xml
<CustomField>
    <fullName>Customer_Project_Details__c</fullName>
    <label>Customer Project Details</label>
    <type>TextArea</type>
</CustomField>