force-app/main/default/objects/Opportunity/fields/Customer_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Project_Name__c</fullName>
    <label>Customer Project Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>