force-app/main/default/objects/Opportunity/fields/Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment__c</fullName>
    <description>JIRA #SDS-2699</description>
    <inlineHelpText>If Seed/NFR, provide target market, segment, or customer / NVCRM Opportunity Name or Number (must be in NVCRM)</inlineHelpText>
    <label>Customer Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>