force-app/main/default/objects/Opportunity/fields/Date_Customer_Notified_of_EOL__c.field-meta.xml
<CustomField>
    <fullName>Date_Customer_Notified_of_EOL__c</fullName>
    <description>For EDW Sales process</description>
    <label>Date Customer Notified of EOL</label>
    <type>Date</type>
</CustomField>