force-app/main/default/objects/Opportunity/fields/Date_is_Flexible__c.field-meta.xml
<CustomField>
    <fullName>Date_is_Flexible__c</fullName>
    <label>Date is Flexible</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>