force-app/main/default/objects/Opportunity/fields/Date_TPC_Results_Reviewed_with_Customer__c.field-meta.xml
<CustomField>
    <fullName>Date_TPC_Results_Reviewed_with_Customer__c</fullName>
    <label>Date TPC Results Reviewed with Customer</label>
    <type>Date</type>
</CustomField>