force-app/main/default/objects/Opportunity/fields/Deal_Worksheet_Completed__c.field-meta.xml
<CustomField>
    <fullName>Deal_Worksheet_Completed__c</fullName>
    <label>Deal Worksheet Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>