force-app/main/default/objects/Opportunity/fields/Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Decision_Date__c</fullName>
    <inlineHelpText>When will OEM know who has won the deal? Only update this date if in a different fiscal quarter than the Close Date</inlineHelpText>
    <label>Decision Date</label>
    <type>Date</type>
</CustomField>