force-app/main/default/objects/Opportunity/fields/Decision_Date_same_FQ_as_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Decision_Date_same_FQ_as_Close_Date__c</fullName>
    <label>Decision Date same FQ as Close Date?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>