force-app/main/default/objects/Opportunity/fields/Design_EOL_Date__c.field-meta.xml
<CustomField>
    <fullName>Design_EOL_Date__c</fullName>
    <inlineHelpText>Enter estimated date production to end.  Date only to estimate total Opportunity value (calcs lifetime revenue).</inlineHelpText>
    <label>Production EOL Date</label>
    <type>Date</type>
</CustomField>