force-app/main/default/objects/Opportunity/fields/Design_Lock_Date__c.field-meta.xml
<CustomField>
    <fullName>Design_Lock_Date__c</fullName>
    <label>Design Lock Date</label>
    <type>Date</type>
</CustomField>