force-app/main/default/objects/Opportunity/fields/Design_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Design_Start_Date__c</fullName>
    <inlineHelpText>Enter estimated date production to begin.  Date ONLY to estimate total Opportunity value (calcs lifetime revenue).  If retail cycle aligned use:
12/1 = 1C
4/1 = 1.5C
7/1 = 2C
10/1 = 3C</inlineHelpText>
    <label>Production Start Date</label>
    <type>Date</type>
</CustomField>