force-app/main/default/objects/Opportunity/fields/Design_Win_End_QTR__c.field-meta.xml
<CustomField>
    <fullName>Design_Win_End_QTR__c</fullName>
    <description>Design Win Ending QTR - populate this form revenue schedule date</description>
    <label>Design Win End QTR</label>
    <type>Date</type>
</CustomField>