force-app/main/default/objects/Opportunity/fields/Design_Win_Start_QTR__c.field-meta.xml
<CustomField>
    <fullName>Design_Win_Start_QTR__c</fullName>
    <description>ENT Design Win Sales process - OLE schedule date copied to this</description>
    <label>Design Win Start QTR</label>
    <type>Date</type>
</CustomField>