force-app/main/default/objects/Opportunity/fields/DGX_Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>DGX_Discount_Percentage__c</fullName>
    <label>DGX Discount Percentage</label>
    <summarizedField>OpportunityLineItem.Discount_Percentage__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Line__c</field>
        <operation>equals</operation>
        <value>DGX</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>