force-app/main/default/objects/Opportunity/fields/DGX_Lost_Details__c.field-meta.xml
<CustomField>
    <fullName>DGX_Lost_Details__c</fullName>
    <label>Lost Details</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Closed_Lost_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AMD CPU - In Cloud</fullName>
                <isActive>false</isActive>
                <label>AMD CPU - In Cloud</label>
            </value>
            <value>
                <fullName>AMD CPU - On Prem</fullName>
                <isActive>false</isActive>
                <label>AMD CPU - On Prem</label>
            </value>
            <value>
                <fullName>AMD GPU - In Cloud</fullName>
                <isActive>false</isActive>
                <label>AMD GPU - In Cloud</label>
            </value>
            <value>
                <fullName>AMD GPU - On Prem</fullName>
                <isActive>false</isActive>
                <label>AMD GPU - On Prem</label>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Competition</fullName>
                <isActive>false</isActive>
                <label>Competition</label>
            </value>
            <value>
                <fullName>Delayed/Pushed Out</fullName>
            </value>
            <value>
                <fullName>DGX</fullName>
            </value>
            <value>
                <fullName>DIY</fullName>
            </value>
            <value>
                <fullName>Don’t Know How To Move Forward</fullName>
            </value>
            <value>
                <fullName>Don’t See Value/ROI</fullName>
            </value>
            <value>
                <fullName>Duplicate Opportunity</fullName>
                <isActive>false</isActive>
                <label>Duplicate Opportunity</label>
            </value>
            <value>
                <fullName>Intel CPU - In Cloud</fullName>
                <isActive>false</isActive>
                <label>Intel CPU - In Cloud</label>
            </value>
            <value>
                <fullName>Intel CPU - On Prem</fullName>
                <isActive>false</isActive>
                <label>Intel CPU - On Prem</label>
            </value>
            <value>
                <fullName>Intel GPU - In Cloud</fullName>
                <isActive>false</isActive>
                <label>Intel GPU - In Cloud</label>
            </value>
            <value>
                <fullName>IT Or Security Concerns</fullName>
            </value>
            <value>
                <fullName>Lead Times Too Long</fullName>
            </value>
            <value>
                <fullName>Not In Stock</fullName>
            </value>
            <value>
                <fullName>Not Regionally Available</fullName>
            </value>
            <value>
                <fullName>OEM/ODM - Gforce/Consumer</fullName>
            </value>
            <value>
                <fullName>OEM/ODM - Tesla Based</fullName>
            </value>
            <value>
                <fullName>OPEX vs CAPEX</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Permanently Canceled</fullName>
            </value>
            <value>
                <fullName>Personnel Change</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Public Cloud</fullName>
                <isActive>false</isActive>
                <label>Public Cloud</label>
            </value>
            <value>
                <fullName>Quality</fullName>
                <isActive>false</isActive>
                <label>Quality</label>
            </value>
            <value>
                <fullName>Stale Pipeline Cleanup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>