force-app/main/default/objects/Opportunity/fields/DGX_POD_Design__c.field-meta.xml
<CustomField>
    <fullName>DGX_POD_Design__c</fullName>
    <description>Type of DGX POD</description>
    <inlineHelpText>Select if a NVIDIA SuperPod Design or a Custom DGX POD Design</inlineHelpText>
    <label>DGX POD Design</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NVIDIA DGX SuperPOD</fullName>
            </value>
            <value>
                <fullName>Custom_DGX_POD_Design</fullName>
                <label>Custom DGX POD Design</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>