force-app/main/default/objects/Opportunity/fields/DGX_POD_Install__c.field-meta.xml
<CustomField>
    <fullName>DGX_POD_Install__c</fullName>
    <description>Track who is providing the DGX POD or SuperPOD installation/implementation</description>
    <inlineHelpText>Partner PS preferred for 1-8 DGX Systems.  Nvidia PS is mandatory for a DGX SuperPOD; recommended for &gt; 8 DGX Systems</inlineHelpText>
    <label>DGX POD Install</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DGX_POD_Design__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner PS - Project Owner</fullName>
                <default>true</default>
                <label>Partner PS - Project Owner</label>
            </value>
            <value>
                <fullName>Nvidia PS - Project Owner</fullName>
            </value>
            <value>
                <fullName>NVIDIA PS Led</fullName>
                <isActive>false</isActive>
                <label>NVIDIA PS Led</label>
            </value>
            <value>
                <fullName>Partner Led</fullName>
                <isActive>false</isActive>
                <label>Partner Led</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>