force-app/main/default/objects/Opportunity/fields/DGX_Product_Amount_non_station__c.field-meta.xml
<CustomField>
    <fullName>DGX_Product_Amount_non_station__c</fullName>
    <description>Roll up DGX product amounts minus the DGX Station product amounts</description>
    <label>DGX Product Amount (non-Station)</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Name__c</field>
        <operation>contains</operation>
        <value>DGX</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Name__c</field>
        <operation>notContain</operation>
        <value>DGX Station</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>