force-app/main/default/objects/Opportunity/fields/DGX_Product_Attached__c.field-meta.xml
<CustomField>
    <fullName>DGX_Product_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>JIRA #SDS-2534</description>
    <inlineHelpText>This field is used for sharing purposes and if checked means that at one time a DGX product was attached</inlineHelpText>
    <label>DGX Product Attached</label>
    <type>Checkbox</type>
</CustomField>