force-app/main/default/objects/Opportunity/fields/DGX_Station_Product_Amount__c.field-meta.xml
<CustomField>
    <fullName>DGX_Station_Product_Amount__c</fullName>
    <description>Rollup of DGX Station product amounts on Opportunity</description>
    <label>DGX Station Product Amount</label>
    <summarizedField>OpportunityLineItem.Line_Item_Total_Cost__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Name__c</field>
        <operation>contains</operation>
        <value>DGX Station</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>