force-app/main/default/objects/Opportunity/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <label>Distributor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt;N/A&gt;</fullName>
            </value>
            <value>
                <fullName>Arrow - North America</fullName>
            </value>
            <value>
                <fullName>Avnet</fullName>
            </value>
            <value>
                <fullName>CRG - Israel</fullName>
            </value>
            <value>
                <fullName>EDOM - Taiwan</fullName>
            </value>
            <value>
                <fullName>Eltech - Russia</fullName>
            </value>
            <value>
                <fullName>Leadtech - TWN/SEA</fullName>
            </value>
            <value>
                <fullName>Macnica - Japan</fullName>
            </value>
            <value>
                <fullName>MDS - Korea</fullName>
            </value>
            <value>
                <fullName>Open Zeka - Turkey</fullName>
            </value>
            <value>
                <fullName>Rashi Peripherals - India</fullName>
            </value>
            <value>
                <fullName>Ryoyo - Japan</fullName>
            </value>
            <value>
                <fullName>Silicon Highway - EU/UK</fullName>
            </value>
            <value>
                <fullName>Synnex - China</fullName>
            </value>
            <value>
                <fullName>TET Industrial - Turkey</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>