force-app/main/default/objects/Opportunity/fields/DLI_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>DLI_Amount_Received__c</fullName>
    <inlineHelpText>Only inputted by DLI Finance person in charge (PIC)</inlineHelpText>
    <label>DLI Amount Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>